# X-mpi

./: .gitignore  config.lisp.in  configure.ac  init.lisp  main.lisp  packages.lisp  plisp  readme.org  shell.nix  x-mpi.asd
tools/: install-quicklisp
